# PerBrew_FastAPI_Server

./: .gitignore  README.md  delete_all.py  generate_delete_log_recipe.py  generate_final_demo.py  generate_mock.py  generate_simple.py  generate_ut.py  pyproject.toml
app/: init_db.py  main.py  pytest.ini  req.txt
app/api/v1/endpoints/: user.py
app/controller/: bean_service.py  machine_service.py  recipe_service.py  review_service.py  users_service.py  ws_service.py
app/core/: auth.py  config.py  database.py
app/models/: __init__.py  bean.py  brew_log.py  machine.py  recipe.py  review.py  user.py
app/routes/: bean_router.py  machine_router.py  recipe_router.py  review_router.py  user_router.py  ws_router.py
app/schemas/: bean_schema.py  brew_log.py  machine_schema.py  recipe_schema.py  review_schema.py  user_schema.py
app/services/: coffee_data.csv  coffee_optimizer.py
app/utils/: openai_helper.py
tests/: conftest.py  test_machine_flow.py  test_user.py  test_websockets.py
