[tool.poetry]
name = "fastapi-poetry"
version = "0.1.0"
description = ""
authors = ["hkksi <ghdtjrgus239@naver.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.119.0"
uvicorn = "^0.37.0"
python-dotenv = "^1.1.1"
sqlalchemy = "^2.0.44"
alembic = "^1.17.0"
psycopg2 = "^2.9.11"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
openai = "^1.58.1"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
pydantic = {extras = ["email"], version = "^2.0.0"}

[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
isort = "^7.0.0"
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
